[gd_scene load_steps=66 format=3 uid="uid://viawkvmrmwv8"]

[ext_resource type="Script" path="res://Characters/Enemy/GenericEnemy.gd" id="1_i0368"]
[ext_resource type="Texture2D" uid="uid://di1j5y5m8rtke" path="res://Characters/1 Drones/3/Idle.png" id="2_bexi8"]
[ext_resource type="Texture2D" uid="uid://j0tcxwlpkmih" path="res://Characters/1 Drones/3/Death.png" id="2_uch0u"]
[ext_resource type="Texture2D" uid="uid://3ieqr3if3ski" path="res://Characters/1 Drones/3/Forward.png" id="3_1s0dh"]
[ext_resource type="Texture2D" uid="uid://dxifvfpc005l7" path="res://Characters/Enemy/explosion spritesheets/explosion-6.png" id="3_7dcmq"]
[ext_resource type="Texture2D" uid="uid://b7oad1oibrply" path="res://Characters/1 Drones/3/Fire1.png" id="5_ksoi0"]
[ext_resource type="Texture2D" uid="uid://ccch5ojdm3pb3" path="res://Characters/1 Drones/3/Fire3.png" id="6_pwxdw"]
[ext_resource type="Texture2D" uid="uid://b5lkkd5ijyuad" path="res://Characters/1 Drones/3/Back.png" id="7_x1smx"]
[ext_resource type="Texture2D" uid="uid://4fkvcn5nv2m7" path="res://Characters/1 Drones/3/Fire2.png" id="7_xy7sw"]
[ext_resource type="Script" path="res://Characters/Enemy/BasicEnemySprite.gd" id="10_mipkb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vywm6"]
atlas = ExtResource("2_uch0u")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jyue"]
atlas = ExtResource("2_uch0u")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_68w0j"]
atlas = ExtResource("2_uch0u")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdu8n"]
atlas = ExtResource("2_uch0u")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h14rq"]
atlas = ExtResource("2_uch0u")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxrd6"]
atlas = ExtResource("2_uch0u")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t34x8"]
atlas = ExtResource("2_uch0u")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpnxi"]
atlas = ExtResource("2_uch0u")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlwdg"]
atlas = ExtResource("3_7dcmq")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltfkk"]
atlas = ExtResource("3_7dcmq")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3bpp"]
atlas = ExtResource("3_7dcmq")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4l505"]
atlas = ExtResource("3_7dcmq")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyy4g"]
atlas = ExtResource("3_7dcmq")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bq3p3"]
atlas = ExtResource("3_7dcmq")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqphg"]
atlas = ExtResource("3_7dcmq")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pj6wg"]
atlas = ExtResource("3_7dcmq")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8aby5"]
atlas = ExtResource("2_bexi8")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4u1t8"]
atlas = ExtResource("2_bexi8")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bu5q"]
atlas = ExtResource("2_bexi8")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnnmb"]
atlas = ExtResource("2_bexi8")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqjx5"]
atlas = ExtResource("5_ksoi0")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxtu5"]
atlas = ExtResource("5_ksoi0")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vi4pv"]
atlas = ExtResource("5_ksoi0")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sour"]
atlas = ExtResource("5_ksoi0")
region = Rect2(528, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_47swi"]
atlas = ExtResource("5_ksoi0")
region = Rect2(576, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf34u"]
atlas = ExtResource("5_ksoi0")
region = Rect2(624, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2vxx"]
atlas = ExtResource("5_ksoi0")
region = Rect2(672, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vhsg"]
atlas = ExtResource("5_ksoi0")
region = Rect2(720, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgcw5"]
atlas = ExtResource("6_pwxdw")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eaci8"]
atlas = ExtResource("6_pwxdw")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8okt"]
atlas = ExtResource("6_pwxdw")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5sey"]
atlas = ExtResource("6_pwxdw")
region = Rect2(528, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7ev5"]
atlas = ExtResource("6_pwxdw")
region = Rect2(576, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6br6g"]
atlas = ExtResource("6_pwxdw")
region = Rect2(624, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jshrv"]
atlas = ExtResource("6_pwxdw")
region = Rect2(672, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjwsq"]
atlas = ExtResource("6_pwxdw")
region = Rect2(720, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5ukx"]
atlas = ExtResource("7_xy7sw")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8ri3"]
atlas = ExtResource("7_xy7sw")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjcub"]
atlas = ExtResource("7_xy7sw")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqh1f"]
atlas = ExtResource("7_xy7sw")
region = Rect2(528, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdgub"]
atlas = ExtResource("7_xy7sw")
region = Rect2(576, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyqhw"]
atlas = ExtResource("7_xy7sw")
region = Rect2(624, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_evoea"]
atlas = ExtResource("7_xy7sw")
region = Rect2(672, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwnrj"]
atlas = ExtResource("7_xy7sw")
region = Rect2(720, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7776j"]
atlas = ExtResource("3_1s0dh")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6o8c3"]
atlas = ExtResource("3_1s0dh")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6w2i"]
atlas = ExtResource("3_1s0dh")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rp27"]
atlas = ExtResource("3_1s0dh")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjidw"]
atlas = ExtResource("7_x1smx")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_euwyf"]
atlas = ExtResource("7_x1smx")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpsk6"]
atlas = ExtResource("7_x1smx")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eanxg"]
atlas = ExtResource("7_x1smx")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_2sygu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vywm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jyue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68w0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdu8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h14rq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxrd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t34x8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpnxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlwdg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltfkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3bpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4l505")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyy4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bq3p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqphg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pj6wg")
}],
"loop": true,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8aby5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u1t8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bu5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnnmb")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqjx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxtu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vi4pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sour")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47swi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf34u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2vxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vhsg")
}],
"loop": true,
"name": &"idle_fire",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgcw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eaci8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8okt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5sey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7ev5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6br6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jshrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjwsq")
}],
"loop": true,
"name": &"moving_back_fire",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5ukx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8ri3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjcub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqh1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdgub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyqhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evoea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwnrj")
}],
"loop": true,
"name": &"moving_fire",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7776j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6o8c3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6w2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rp27")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjidw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_euwyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpsk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eanxg")
}],
"loop": true,
"name": &"walk_back",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_f3m43"]
radius = 400.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g41jh"]

[node name="GenericEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_i0368")

[node name="HitboxSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2sygu")
frame_progress = 0.476446
flip_h = true
script = ExtResource("10_mipkb")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_f3m43")

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_g41jh")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
